[gd_scene load_steps=3 format=3 uid="uid://5ewwj86v5rsu"]

[ext_resource type="PackedScene" uid="uid://co685r3r35on8" path="res://scenes/board.tscn" id="1_dm0h6"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_n6j2r"]

[node name="Main" type="Node2D"]
script = ExtResource("1_n6j2r")

[node name="ColorRect" parent="." instance=ExtResource("1_dm0h6")]
custom_minimum_size = Vector2(1152, 648)
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 1
grow_vertical = 1

[node name="mouseXPos" type="Label" parent="."]
offset_left = 20.0
offset_top = 9.0
offset_right = 157.0
offset_bottom = 32.0
text = "Mouse X Position:"

[node name="mouseYPos" type="Label" parent="."]
offset_left = 21.0
offset_top = 48.0
offset_right = 158.0
offset_bottom = 71.0
text = "Mouse Y Position:
"
